Fixed link overflow
fixed css on modal for external link

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -2,4 +2,5 @@
   text-align: center;
   color: #ce1111 !important;
   font-weight: bold;
+  overflow-wrap: anywhere;
 }
